updated the manpage to refer to -O csv option

--- a/scamper/scamper.1
+++ b/scamper/scamper.1
@@ -164,6 +164,12 @@ The current choices for this option are:
 .Sy text
 output results using plain text.  Suitable for interactive use.
 .It
+.Sy json
+output results using json.  Currently supported: trace, ping, dealias
+.It
+.Sy csv
+output results using csv.  Currently supported: trace
+.It
 .Sy warts
 output results to a warts binary file.  Suitable for archiving measurement
 results and for use by researchers as it records details that cannot be
